# university

dbms/lab3/src/: backup.sql  create_replica.sh  do_replica.sh  dump_log.sql  inits191954_rep.ora  listener.ora  restore.sql  sqlnet.ora  tnsnames.ora  update.sql
info_man_systems/lab3/src/: async.c  lab3.c  sync.c
sig_proc/coursework/: report.md
sig_proc/coursework/src/: fold.rs
systemc/: .gitignore
systemc/lab1/: CMakeLists.txt
systemc/lab1/src/: BusMatrix.cpp  BusMatrix.h  InputCapture.cpp  Signal.cpp  input_capture.cpp  input_capture.h  main.cpp  mem.h  mips32.cpp  mips32.h  timer.cpp  timer.h
systemc/lab1/src/input_capture/: Prescaler.cpp  bus_control.cpp  bus_control.h  edge_detector.cpp  edge_detector.h  fifo.cpp  fifo.h  icconf.cpp  icconf.h  prescaler.cpp  prescaler.h  timers_control.cpp
systemc/lab2/: lab2.xpr
systemc/lab2/lab2.cache/wt/: webtalk_pa.xml
systemc/lab2/lab2.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml
systemc/lab2/lab2.runs/uc_system_axi_gpio_0_0_synth_1/: dont_touch.xdc  gen_run.xml  uc_system_axi_gpio_0_0.tcl
systemc/lab2/lab2.runs/uc_system_axi_timer_0_0_synth_1/: dont_touch.xdc  gen_run.xml  uc_system_axi_timer_0_0.tcl
systemc/lab2/lab2.runs/uc_system_clk_wiz_0_0_synth_1/: dont_touch.xdc  gen_run.xml  uc_system_clk_wiz_0_0.tcl
systemc/lab2/lab2.runs/uc_system_dlmb_bram_if_cntlr_0_synth_1/: dont_touch.xdc  gen_run.xml  uc_system_dlmb_bram_if_cntlr_0.tcl
systemc/lab2/lab2.runs/uc_system_dlmb_v10_0_synth_1/: dont_touch.xdc  gen_run.xml  uc_system_dlmb_v10_0.tcl
systemc/lab2/lab2.sdk/webtalk/: sdk_webtalk.tcl  (+1 more)
(+57 files in other folders)
